edgevox-onnx/c-api/c-api.h


typedef struct EdgevoxOnnxOnlineRecognizerConfig {
  EdgevoxOnnxFeatureConfig feat_config;
  EdgevoxOnnxOnlineModelConfig model_config;
  const char *decoding_method;
  int32_t max_active_paths;
  int32_t enable_endpoint;
  float rule1_min_trailing_silence;
  float rule2_min_trailing_silence;
  float rule3_min_utterance_length;
  const char *hotwords_file;
  float hotwords_score;
  EdgevoxOnnxOnlineCtcFstDecoderConfig ctc_fst_decoder_config;
  const char *rule_fsts;
  const char *rule_fars;
  float blank_penalty;
  const char *hotwords_buf;
  int32_t hotwords_buf_size;
  EdgevoxOnnxHomophoneReplacerConfig hr;
} EdgevoxOnnxOnlineRecognizerConfig;
typedef struct EdgevoxOnnxOnlineRecognizer EdgevoxOnnxOnlineRecognizer;
typedef struct EdgevoxOnnxOnlineStream EdgevoxOnnxOnlineStream;
EDGEVOX_ONNX_API const EdgevoxOnnxOnlineRecognizer *
EdgevoxOnnxCreateOnlineRecognizer(
    const EdgevoxOnnxOnlineRecognizerConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOnlineRecognizer(
    const EdgevoxOnnxOnlineRecognizer *recognizer);
EDGEVOX_ONNX_API const EdgevoxOnnxOnlineStream *EdgevoxOnnxCreateOnlineStream(
    const EdgevoxOnnxOnlineRecognizer *recognizer);
EDGEVOX_ONNX_API const EdgevoxOnnxOnlineStream *
EdgevoxOnnxCreateOnlineStreamWithHotwords(
    const EdgevoxOnnxOnlineRecognizer *recognizer, const char *hotwords);
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxIsOnlineStreamReady(const EdgevoxOnnxOnlineRecognizer *recognizer,
                              const EdgevoxOnnxOnlineStream *stream);
EDGEVOX_ONNX_API void EdgevoxOnnxDecodeOnlineStream(
    const EdgevoxOnnxOnlineRecognizer *recognizer,
    const EdgevoxOnnxOnlineStream *stream);
EDGEVOX_ONNX_API const char *EdgevoxOnnxGetOnlineStreamResultAsJson(
    const EdgevoxOnnxOnlineRecognizer *recognizer,
    const EdgevoxOnnxOnlineStream *stream);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOnlineStreamResultJson(const char *s);
EDGEVOX_ONNX_API void EdgevoxOnnxOnlineStreamReset(
    const EdgevoxOnnxOnlineRecognizer *recognizer,
    const EdgevoxOnnxOnlineStream *stream);
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxOnlineStreamIsEndpoint(const EdgevoxOnnxOnlineRecognizer *recognizer,
                                 const EdgevoxOnnxOnlineStream *stream);
typedef struct EdgevoxOnnxOfflineRecognizerConfig {
  EdgevoxOnnxFeatureConfig feat_config;
  EdgevoxOnnxOfflineModelConfig model_config;
  EdgevoxOnnxOfflineLMConfig lm_config;
  const char *decoding_method;
  int32_t max_active_paths;
  const char *hotwords_file;
  float hotwords_score;
  const char *rule_fsts;
  const char *rule_fars;
  float blank_penalty;
  EdgevoxOnnxHomophoneReplacerConfig hr;
} EdgevoxOnnxOfflineRecognizerConfig;
typedef struct EdgevoxOnnxOfflineRecognizer EdgevoxOnnxOfflineRecognizer;
typedef struct EdgevoxOnnxOfflineStream EdgevoxOnnxOfflineStream;
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineRecognizer *
EdgevoxOnnxCreateOfflineRecognizer(
    const EdgevoxOnnxOfflineRecognizerConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxOfflineRecognizerSetConfig(
    const EdgevoxOnnxOfflineRecognizer *recognizer,
    const EdgevoxOnnxOfflineRecognizerConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOfflineRecognizer(
    const EdgevoxOnnxOfflineRecognizer *recognizer);
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineStream *EdgevoxOnnxCreateOfflineStream(
    const EdgevoxOnnxOfflineRecognizer *recognizer);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOfflineStream(
    const EdgevoxOnnxOfflineStream *stream);
EDGEVOX_ONNX_API void EdgevoxOnnxAcceptWaveformOffline(
    const EdgevoxOnnxOfflineStream *stream, int32_t sample_rate,
    const float *samples, int32_t n);
EDGEVOX_ONNX_API void EdgevoxOnnxOfflineStreamSetOption(
    const EdgevoxOnnxOfflineStream *stream, const char *key, const char *value);
EDGEVOX_ONNX_API void EdgevoxOnnxDecodeOfflineStream(
    const EdgevoxOnnxOfflineRecognizer *recognizer,
    const EdgevoxOnnxOfflineStream *stream);
EDGEVOX_ONNX_API const char *EdgevoxOnnxGetOfflineStreamResultAsJson(
    const EdgevoxOnnxOfflineStream *stream);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOfflineStreamResultJson(const char *s);
typedef struct EdgevoxOnnxKeywordSpotterConfig {
  EdgevoxOnnxFeatureConfig feat_config;
  EdgevoxOnnxOnlineModelConfig model_config;
  int32_t max_active_paths;
  int32_t num_trailing_blanks;
  float keywords_score;
  float keywords_threshold;
  const char *keywords_file;
  const char *keywords_buf;
  int32_t keywords_buf_size;
} EdgevoxOnnxKeywordSpotterConfig;
typedef struct EdgevoxOnnxKeywordSpotter EdgevoxOnnxKeywordSpotter;
EDGEVOX_ONNX_API const EdgevoxOnnxKeywordSpotter *EdgevoxOnnxCreateKeywordSpotter(
    const EdgevoxOnnxKeywordSpotterConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyKeywordSpotter(
    const EdgevoxOnnxKeywordSpotter *spotter);
EDGEVOX_ONNX_API const EdgevoxOnnxOnlineStream *EdgevoxOnnxCreateKeywordStream(
    const EdgevoxOnnxKeywordSpotter *spotter);
EDGEVOX_ONNX_API const EdgevoxOnnxOnlineStream *
EdgevoxOnnxCreateKeywordStreamWithKeywords(
    const EdgevoxOnnxKeywordSpotter *spotter, const char *keywords);
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxIsKeywordStreamReady(const EdgevoxOnnxKeywordSpotter *spotter,
                               const EdgevoxOnnxOnlineStream *stream);
EDGEVOX_ONNX_API void EdgevoxOnnxDecodeKeywordStream(
    const EdgevoxOnnxKeywordSpotter *spotter,
    const EdgevoxOnnxOnlineStream *stream);
EDGEVOX_ONNX_API void EdgevoxOnnxResetKeywordStream(
    const EdgevoxOnnxKeywordSpotter *spotter,
    const EdgevoxOnnxOnlineStream *stream);
EDGEVOX_ONNX_API const char *EdgevoxOnnxGetKeywordResultAsJson(
    const EdgevoxOnnxKeywordSpotter *spotter,
    const EdgevoxOnnxOnlineStream *stream);
EDGEVOX_ONNX_API void EdgevoxOnnxFreeKeywordResultJson(const char *s);
typedef struct EdgevoxOnnxVadModelConfig {
  EdgevoxOnnxSileroVadModelConfig silero_vad;
  int32_t sample_rate;
  int32_t num_threads;
  const char *provider;
  int32_t debug;
  EdgevoxOnnxTenVadModelConfig ten_vad;
} EdgevoxOnnxVadModelConfig;
typedef struct EdgevoxOnnxCircularBuffer EdgevoxOnnxCircularBuffer;
EDGEVOX_ONNX_API const EdgevoxOnnxCircularBuffer *EdgevoxOnnxCreateCircularBuffer(
    int32_t capacity);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyCircularBuffer(
    const EdgevoxOnnxCircularBuffer *buffer);
EDGEVOX_ONNX_API void EdgevoxOnnxCircularBufferPush(
    const EdgevoxOnnxCircularBuffer *buffer, const float *p, int32_t n);
EDGEVOX_ONNX_API const float *EdgevoxOnnxCircularBufferGet(
    const EdgevoxOnnxCircularBuffer *buffer, int32_t start_index, int32_t n);
EDGEVOX_ONNX_API void EdgevoxOnnxCircularBufferFree(const float *p);
EDGEVOX_ONNX_API void EdgevoxOnnxCircularBufferPop(
    const EdgevoxOnnxCircularBuffer *buffer, int32_t n);
typedef struct EdgevoxOnnxSpeechSegment {
  int32_t start;
  float *samples;
  int32_t n;
} EdgevoxOnnxSpeechSegment;
typedef struct EdgevoxOnnxVoiceActivityDetector EdgevoxOnnxVoiceActivityDetector;
EDGEVOX_ONNX_API const EdgevoxOnnxVoiceActivityDetector *
EdgevoxOnnxCreateVoiceActivityDetector(const EdgevoxOnnxVadModelConfig *config,
                                      float buffer_size_in_seconds);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyVoiceActivityDetector(
    const EdgevoxOnnxVoiceActivityDetector *p);
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorAcceptWaveform(
    const EdgevoxOnnxVoiceActivityDetector *p, const float *samples, int32_t n);
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxVoiceActivityDetectorEmpty(const EdgevoxOnnxVoiceActivityDetector *p);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxVoiceActivityDetectorDetected(
    const EdgevoxOnnxVoiceActivityDetector *p);
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorPop(
    const EdgevoxOnnxVoiceActivityDetector *p);
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorClear(
    const EdgevoxOnnxVoiceActivityDetector *p);
EDGEVOX_ONNX_API const EdgevoxOnnxSpeechSegment *
EdgevoxOnnxVoiceActivityDetectorFront(const EdgevoxOnnxVoiceActivityDetector *p);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpeechSegment(
    const EdgevoxOnnxSpeechSegment *p);
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorReset(
    const EdgevoxOnnxVoiceActivityDetector *p);
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorFlush(
    const EdgevoxOnnxVoiceActivityDetector *p);
typedef struct EdgevoxOnnxOfflineTtsConfig {
  EdgevoxOnnxOfflineTtsModelConfig model;
  const char *rule_fsts;
  int32_t max_num_sentences;
  const char *rule_fars;
  float silence_scale;
} EdgevoxOnnxOfflineTtsConfig;
typedef struct EdgevoxOnnxGeneratedAudio {
  const float *samples;
  int32_t n;
  int32_t sample_rate;
} EdgevoxOnnxGeneratedAudio;
typedef int32_t (*EdgevoxOnnxGeneratedAudioCallback)(const float *samples,
                                                    int32_t n);
typedef int32_t (*EdgevoxOnnxGeneratedAudioCallbackWithArg)(const float *samples,
                                                           int32_t n,
                                                           void *arg);
typedef int32_t (*EdgevoxOnnxGeneratedAudioProgressCallback)(
    const float *samples, int32_t n, float p);
typedef int32_t (*EdgevoxOnnxGeneratedAudioProgressCallbackWithArg)(
    const float *samples, int32_t n, float p, void *arg);
typedef struct EdgevoxOnnxOfflineTts EdgevoxOnnxOfflineTts;
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineTts *EdgevoxOnnxCreateOfflineTts(
    const EdgevoxOnnxOfflineTtsConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOfflineTts(
    const EdgevoxOnnxOfflineTts *tts);
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxOfflineTtsSampleRate(const EdgevoxOnnxOfflineTts *tts);
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxOfflineTtsNumSpeakers(const EdgevoxOnnxOfflineTts *tts);
EDGEVOX_ONNX_API EDGEVOX_ONNX_DEPRECATED(
    "Use EdgevoxOnnxOfflineTtsGenerateWithConfig() instead") const
    EdgevoxOnnxGeneratedAudio *EdgevoxOnnxOfflineTtsGenerate(
        const EdgevoxOnnxOfflineTts *tts, const char *text, int32_t sid,
        float speed);
EDGEVOX_ONNX_API EDGEVOX_ONNX_DEPRECATED(
    "Use EdgevoxOnnxOfflineTtsGenerateWithConfig() instead") const
    EdgevoxOnnxGeneratedAudio *EdgevoxOnnxOfflineTtsGenerateWithCallback(
        const EdgevoxOnnxOfflineTts *tts, const char *text, int32_t sid,
        float speed, EdgevoxOnnxGeneratedAudioCallback callback);
EDGEVOX_ONNX_API EDGEVOX_ONNX_DEPRECATED(
    "Use EdgevoxOnnxOfflineTtsGenerateWithConfig() instead") const
    EdgevoxOnnxGeneratedAudio *EdgevoxOnnxOfflineTtsGenerateWithProgressCallback(
        const EdgevoxOnnxOfflineTts *tts, const char *text, int32_t sid,
        float speed, EdgevoxOnnxGeneratedAudioProgressCallback callback);
EDGEVOX_ONNX_API EDGEVOX_ONNX_DEPRECATED(
    "Use EdgevoxOnnxOfflineTtsGenerateWithConfig() instead") const
    EdgevoxOnnxGeneratedAudio
        *EdgevoxOnnxOfflineTtsGenerateWithProgressCallbackWithArg(
            const EdgevoxOnnxOfflineTts *tts, const char *text, int32_t sid,
            float speed,
            EdgevoxOnnxGeneratedAudioProgressCallbackWithArg callback,
            void *arg);
EDGEVOX_ONNX_API EDGEVOX_ONNX_DEPRECATED(
    "Use EdgevoxOnnxOfflineTtsGenerateWithConfig() instead") const
    EdgevoxOnnxGeneratedAudio *EdgevoxOnnxOfflineTtsGenerateWithCallbackWithArg(
        const EdgevoxOnnxOfflineTts *tts, const char *text, int32_t sid,
        float speed, EdgevoxOnnxGeneratedAudioCallbackWithArg callback,
        void *arg);
EDGEVOX_ONNX_API EDGEVOX_ONNX_DEPRECATED(
    "Use EdgevoxOnnxOfflineTtsGenerateWithConfig() instead") const
    EdgevoxOnnxGeneratedAudio *EdgevoxOnnxOfflineTtsGenerateWithZipvoice(
        const EdgevoxOnnxOfflineTts *tts, const char *text,
        const char *prompt_text, const float *prompt_samples, int32_t n_prompt,
        int32_t prompt_sr, float speed, int32_t num_steps);
typedef struct EdgevoxOnnxGenerationConfig {
  float silence_scale;
  float speed;
  int32_t sid;
  const float *reference_audio;
  int32_t reference_audio_len;
  int32_t reference_sample_rate;
  const char *reference_text;
  int32_t num_steps;
  const char *extra;
} EdgevoxOnnxGenerationConfig;
EDGEVOX_ONNX_API const EdgevoxOnnxGeneratedAudio *
EdgevoxOnnxOfflineTtsGenerateWithConfig(
    const EdgevoxOnnxOfflineTts *tts, const char *text,
    const EdgevoxOnnxGenerationConfig *config,
    EdgevoxOnnxGeneratedAudioProgressCallbackWithArg callback, void *arg);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOfflineTtsGeneratedAudio(
    const EdgevoxOnnxGeneratedAudio *p);
typedef struct EdgevoxOnnxAudioTaggingConfig {
  EdgevoxOnnxAudioTaggingModelConfig model;
  const char *labels;
  int32_t top_k;
} EdgevoxOnnxAudioTaggingConfig;
typedef struct EdgevoxOnnxAudioEvent {
  const char *name;
  int32_t index;
  float prob;
} EdgevoxOnnxAudioEvent;
typedef struct EdgevoxOnnxAudioTagging EdgevoxOnnxAudioTagging;
EDGEVOX_ONNX_API const EdgevoxOnnxAudioTagging *EdgevoxOnnxCreateAudioTagging(
    const EdgevoxOnnxAudioTaggingConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyAudioTagging(
    const EdgevoxOnnxAudioTagging *tagger);
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineStream *
EdgevoxOnnxAudioTaggingCreateOfflineStream(const EdgevoxOnnxAudioTagging *tagger);
EDGEVOX_ONNX_API const EdgevoxOnnxAudioEvent *const *
EdgevoxOnnxAudioTaggingCompute(const EdgevoxOnnxAudioTagging *tagger,
                              const EdgevoxOnnxOfflineStream *s, int32_t top_k);
EDGEVOX_ONNX_API void EdgevoxOnnxAudioTaggingFreeResults(
    const EdgevoxOnnxAudioEvent *const *p);
EDGEVOX_ONNX_API void EdgevoxOnnxOnlinePunctuationFreeText(const char *text);