flutter/edgevox_onnx/lib/src/edgevox_onnx_bindings.dart


    edgevoxOnnxOnlinePunctuationFreeText ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxOnlinePunctuationFreeTextNative>>(
          'EdgevoxOnnxOnlinePunctuationFreeText',
        )
        .asFunction();

    edgevoxOnnxCreateAudioTagging ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCreateAudioTaggingNative>>(
          'EdgevoxOnnxCreateAudioTagging',
        )
        .asFunction();

    edgevoxOnnxDestroyAudioTagging ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDestroyAudioTaggingNative>>(
          'EdgevoxOnnxDestroyAudioTagging',
        )
        .asFunction();

    edgevoxOnnxAudioTaggingCreateOfflineStream ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxAudioTaggingCreateOfflineStreamNative>
        >('EdgevoxOnnxAudioTaggingCreateOfflineStream')
        .asFunction();

    edgevoxOnnxAudioTaggingCompute ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxAudioTaggingComputeNative>>(
          'EdgevoxOnnxAudioTaggingCompute',
        )
        .asFunction();

    edgevoxOnnxAudioTaggingFreeResults ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxAudioTaggingFreeResultsNative>>(
          'EdgevoxOnnxAudioTaggingFreeResults',
        )
        .asFunction();

    createKeywordSpotter ??= dynamicLibrary
        .lookup<NativeFunction<CreateKeywordSpotterNative>>(
          'EdgevoxOnnxCreateKeywordSpotter',
        )
        .asFunction();

    destroyKeywordSpotter ??= dynamicLibrary
        .lookup<NativeFunction<DestroyKeywordSpotterNative>>(
          'EdgevoxOnnxDestroyKeywordSpotter',
        )
        .asFunction();

    createKeywordStream ??= dynamicLibrary
        .lookup<NativeFunction<CreateKeywordStreamNative>>(
          'EdgevoxOnnxCreateKeywordStream',
        )
        .asFunction();

    createKeywordStreamWithKeywords ??= dynamicLibrary
        .lookup<NativeFunction<CreateKeywordStreamWithKeywordsNative>>(
          'EdgevoxOnnxCreateKeywordStreamWithKeywords',
        )
        .asFunction();

    isKeywordStreamReady ??= dynamicLibrary
        .lookup<NativeFunction<IsKeywordStreamReadyNative>>(
          'EdgevoxOnnxIsKeywordStreamReady',
        )
        .asFunction();

    decodeKeywordStream ??= dynamicLibrary
        .lookup<NativeFunction<DecodeKeywordStreamNative>>(
          'EdgevoxOnnxDecodeKeywordStream',
        )
        .asFunction();

    resetKeywordStream ??= dynamicLibrary
        .lookup<NativeFunction<ResetKeywordStreamNative>>(
          'EdgevoxOnnxResetKeywordStream',
        )
        .asFunction();

    getKeywordResultAsJson ??= dynamicLibrary
        .lookup<NativeFunction<GetKeywordResultAsJsonNative>>(
          'EdgevoxOnnxGetKeywordResultAsJson',
        )
        .asFunction();

    freeKeywordResultJson ??= dynamicLibrary
        .lookup<NativeFunction<FreeKeywordResultJsonNative>>(
          'EdgevoxOnnxFreeKeywordResultJson',
        )
        .asFunction();

    createOfflineTts ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCreateOfflineTtsNative>>(
          'EdgevoxOnnxCreateOfflineTts',
        )
        .asFunction();

    destroyOfflineTts ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDestroyOfflineTtsNative>>(
          'EdgevoxOnnxDestroyOfflineTts',
        )
        .asFunction();

    offlineTtsSampleRate ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxOfflineTtsSampleRateNative>>(
          'EdgevoxOnnxOfflineTtsSampleRate',
        )
        .asFunction();

    offlineTtsNumSpeakers ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxOfflineTtsNumSpeakersNative>>(
          'EdgevoxOnnxOfflineTtsNumSpeakers',
        )
        .asFunction();

    offlineTtsGenerate ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxOfflineTtsGenerateNative>>(
          'EdgevoxOnnxOfflineTtsGenerate',
        )
        .asFunction();

    destroyOfflineTtsGeneratedAudio ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxDestroyOfflineTtsGeneratedAudioNative>
        >('EdgevoxOnnxDestroyOfflineTtsGeneratedAudio')
        .asFunction();

    offlineTtsGenerateWithCallback ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxOfflineTtsGenerateWithCallbackNative>>(
          'EdgevoxOnnxOfflineTtsGenerateWithCallback',
        )
        .asFunction();

    offlineTtsGenerateWithConfig ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxOfflineTtsGenerateWithConfigNative>>(
          'EdgevoxOnnxOfflineTtsGenerateWithConfig',
        )
        .asFunction();

    createOfflineRecognizer ??= dynamicLibrary
        .lookup<NativeFunction<CreateOfflineRecognizerNative>>(
          'EdgevoxOnnxCreateOfflineRecognizer',
        )
        .asFunction();

    destroyOfflineRecognizer ??= dynamicLibrary
        .lookup<NativeFunction<DestroyOfflineRecognizerNative>>(
          'EdgevoxOnnxDestroyOfflineRecognizer',
        )
        .asFunction();

    offlineRecognizerSetConfig ??= dynamicLibrary
        .lookup<NativeFunction<OfflineRecognizerSetConfigNative>>(
          'EdgevoxOnnxOfflineRecognizerSetConfig',
        )
        .asFunction();

    createOfflineStream ??= dynamicLibrary
        .lookup<NativeFunction<CreateOfflineStreamNative>>(
          'EdgevoxOnnxCreateOfflineStream',
        )
        .asFunction();

    destroyOfflineStream ??= dynamicLibrary
        .lookup<NativeFunction<DestroyOfflineStreamNative>>(
          'EdgevoxOnnxDestroyOfflineStream',
        )
        .asFunction();

    acceptWaveformOffline ??= dynamicLibrary
        .lookup<NativeFunction<AcceptWaveformOfflineNative>>(
          'EdgevoxOnnxAcceptWaveformOffline',
        )
        .asFunction();

    offlineStreamSetOption ??= dynamicLibrary
        .lookup<NativeFunction<OfflineStreamSetOptionNative>>(
          'EdgevoxOnnxOfflineStreamSetOption',
        )
        .asFunction();

    decodeOfflineStream ??= dynamicLibrary
        .lookup<NativeFunction<DecodeOfflineStreamNative>>(
          'EdgevoxOnnxDecodeOfflineStream',
        )
        .asFunction();

    getOfflineStreamResultAsJson ??= dynamicLibrary
        .lookup<NativeFunction<GetOfflineStreamResultAsJsonNative>>(
          'EdgevoxOnnxGetOfflineStreamResultAsJson',
        )
        .asFunction();

    destroyOfflineStreamResultJson ??= dynamicLibrary
        .lookup<NativeFunction<DestroyOfflineStreamResultJsonNative>>(
          'EdgevoxOnnxDestroyOfflineStreamResultJson',
        )
        .asFunction();

    createOnlineRecognizer ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCreateOnlineRecognizerNative>>(
          'EdgevoxOnnxCreateOnlineRecognizer',
        )
        .asFunction();

    destroyOnlineRecognizer ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDestroyOnlineRecognizerNative>>(
          'EdgevoxOnnxDestroyOnlineRecognizer',
        )
        .asFunction();

    createOnlineStream ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCreateOnlineStreamNative>>(
          'EdgevoxOnnxCreateOnlineStream',
        )
        .asFunction();

    createOnlineStreamWithHotwords ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCreateOnlineStreamWithHotwordsNative>>(
          'EdgevoxOnnxCreateOnlineStreamWithHotwords',
        )
        .asFunction();

    isOnlineStreamReady ??= dynamicLibrary
        .lookup<NativeFunction<IsOnlineStreamReadyNative>>(
          'EdgevoxOnnxIsOnlineStreamReady',
        )
        .asFunction();

    decodeOnlineStream ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDecodeOnlineStreamNative>>(
          'EdgevoxOnnxDecodeOnlineStream',
        )
        .asFunction();

    getOnlineStreamResultAsJson ??= dynamicLibrary
        .lookup<NativeFunction<GetOnlineStreamResultAsJsonNative>>(
          'EdgevoxOnnxGetOnlineStreamResultAsJson',
        )
        .asFunction();

    reset ??= dynamicLibrary
        .lookup<NativeFunction<ResetNative>>('EdgevoxOnnxOnlineStreamReset')
        .asFunction();

    isEndpoint ??= dynamicLibrary
        .lookup<NativeFunction<IsEndpointNative>>(
          'EdgevoxOnnxOnlineStreamIsEndpoint',
        )
        .asFunction();

    destroyOnlineStreamResultJson ??= dynamicLibrary
        .lookup<NativeFunction<DestroyOnlineStreamResultJsonNative>>(
          'EdgevoxOnnxDestroyOnlineStreamResultJson',
        )
        .asFunction();

    createVoiceActivityDetector ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCreateVoiceActivityDetectorNative>>(
          'EdgevoxOnnxCreateVoiceActivityDetector',
        )
        .asFunction();

    destroyVoiceActivityDetector ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDestroyVoiceActivityDetectorNative>>(
          'EdgevoxOnnxDestroyVoiceActivityDetector',
        )
        .asFunction();

    voiceActivityDetectorAcceptWaveform ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxVoiceActivityDetectorAcceptWaveformNative>
        >('EdgevoxOnnxVoiceActivityDetectorAcceptWaveform')
        .asFunction();

    voiceActivityDetectorEmpty ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxVoiceActivityDetectorEmptyNative>>(
          'EdgevoxOnnxVoiceActivityDetectorEmpty',
        )
        .asFunction();

    voiceActivityDetectorDetected ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxVoiceActivityDetectorDetectedNative>>(
          'EdgevoxOnnxVoiceActivityDetectorDetected',
        )
        .asFunction();

    voiceActivityDetectorPop ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxVoiceActivityDetectorPopNative>>(
          'EdgevoxOnnxVoiceActivityDetectorPop',
        )
        .asFunction();

    voiceActivityDetectorClear ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxVoiceActivityDetectorClearNative>>(
          'EdgevoxOnnxVoiceActivityDetectorClear',
        )
        .asFunction();

    voiceActivityDetectorFront ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxVoiceActivityDetectorFrontNative>>(
          'EdgevoxOnnxVoiceActivityDetectorFront',
        )
        .asFunction();

    destroySpeechSegment ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDestroySpeechSegmentNative>>(
          'EdgevoxOnnxDestroySpeechSegment',
        )
        .asFunction();

    voiceActivityDetectorReset ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxVoiceActivityDetectorResetNative>>(
          'EdgevoxOnnxVoiceActivityDetectorReset',
        )
        .asFunction();

    voiceActivityDetectorFlush ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxVoiceActivityDetectorFlushNative>>(
          'EdgevoxOnnxVoiceActivityDetectorFlush',
        )
        .asFunction();

    createCircularBuffer ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCreateCircularBufferNative>>(
          'EdgevoxOnnxCreateCircularBuffer',
        )
        .asFunction();

    destroyCircularBuffer ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDestroyCircularBufferNative>>(
          'EdgevoxOnnxDestroyCircularBuffer',
        )
        .asFunction();

    circularBufferPush ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCircularBufferPushNative>>(
          'EdgevoxOnnxCircularBufferPush',
        )
        .asFunction();

    circularBufferGet ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCircularBufferGetNative>>(
          'EdgevoxOnnxCircularBufferGet',
        )
        .asFunction();

    circularBufferFree ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCircularBufferFreeNative>>(
          'EdgevoxOnnxCircularBufferFree',
        )
        .asFunction();

    circularBufferPop ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCircularBufferPopNative>>(
          'EdgevoxOnnxCircularBufferPop',
        )
        .asFunction();
